--- a/requirements.txt
+++ b/requirements.txt
@@ -2,10 +2,12 @@
 pandas>=2.0.0
 numpy>=1.24.0
 
-# Web Scraping (Optional)
+# Web Scraping
 beautifulsoup4>=4.12.0
 requests>=2.31.0
 selenium>=4.10.0
+lxml>=4.9.0
+scrapy>=2.11.0
 
 # Natural Language Processing
 nltk>=3.8.0
